--- a/src/flutter_src/pubspec.yaml
+++ b/src/flutter_src/pubspec.yaml
@@ -58,9 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -74,12 +73,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: Merriweather
-     fonts:
-       - asset: fonts/Merriweather-Regular.ttf
-   - family: MerriweatherBold
-     fonts:
-       - asset: fonts/Merriweather-Bold.ttf
+    - family: Merriweather
+      fonts:
+        - asset: fonts/Merriweather-Regular.ttf
+    - family: MerriweatherBold
+      fonts:
+        - asset: fonts/Merriweather-Bold.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
