--- a/src/flutter_src/pubspec.yaml
+++ b/src/flutter_src/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fin_quote: ^0.1.4
+  crypto: ^3.0.1
   # http: ^0.13.4
 
 dev_dependencies:
