--- a/src/flutter_src/pubspec.yaml
+++ b/src/flutter_src/pubspec.yaml
@@ -95,6 +95,13 @@ flutter:
           weight: 600
         - asset: fonts/ReadexPro-Bold.ttf
           weight: 700
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: fonts/Poppins-Italic.ttf
+          style: italic
 
 
   # For details regarding fonts from package dependencies,
