Added dark theme add investment images

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 docs/images/nexus_demo_beta_alpha_return.png
 docs/images/test_with_indian_stock_exchange.png
 docs/images/test_with_weekend_days_nyse_investments.png
+docs/images/dark_theme_beta_alpha_return_test.png
 
 # console output 
 src/python_output.md
